Stuff that includes - grid, buttons, general layout and drawing mechanics

--- a/percy.html
+++ b/percy.html
@@ -16,7 +16,11 @@
 				<div class="draw-grid"></div>
 			</div>
 			<div class="info">Info</div>
-			<div class="result">Result</div>
+			<div class="result"><h2>Result </h2>
+				<div>Assumption <span class="spanini"></span></div>
+				<div>Binary <span class="banini"></span> </div>
+				<div> <button class= "tru"> Dis tru </button> <button class= "false"> This is a lie </button> </div>
+			</div>
 		</div>
 		<div class="footer">Copyright &copy; Nadan JSR</div>
 	</div>
