neurons and connections

--- a/percy.html
+++ b/percy.html
@@ -3,7 +3,7 @@
 <head>
 	<link rel="stylesheet" href="./percy.css" />
 	<script src="./jquery.min.js"></script>
-	<script src="percy.js"></script>
+	<script src="percy.js" type="module"></script>
 </head>
 
 <body>
