made neurons and we also made the weight system but its non-adjustable

--- a/percy.html
+++ b/percy.html
@@ -13,8 +13,10 @@
 		</div>
 		<div class="content">
 			<div class="canvas">
-				<div class="draw-grid"></div>
+				<div class="draw-grid">
+				 </div><div> <button class= "calc"> Do some magic </button>
 			</div>
+		</div>
 			<div class="info">Info</div>
 			<div class="result"><h2>Result </h2>
 				<div>Assumption <span class="spanini"></span></div>
