--- a/percy.html
+++ b/percy.html
@@ -14,14 +14,20 @@
 		<div class="content">
 			<div class="canvas">
 				<div class="draw-grid">
-				 </div><div> <button class= "calc"> Do some magic </button>
+				</div>
+				<div> 
+					<select class="select-net-state"></select>
+					<button class="btn-save">Save net state</button>
+					<select class="select-content"></select>
+					<button class="calc"> Do some magic </button>
+				</div>
 			</div>
-		</div>
 			<div class="info">Info</div>
-			<div class="result"><h2>Result </h2>
+			<div class="result">
+				<h2>Result </h2>
 				<div>Assumption <span class="spanini"></span></div>
 				<div>Binary <span class="banini"></span> </div>
-				<div> <button class= "tru"> Dis tru </button> <button class= "false"> This is a lie </button> </div>
+				<div> <button class="tru"> Dis tru </button> <button class="false"> This is a lie </button> </div>
 			</div>
 		</div>
 		<div class="footer">Copyright &copy; Nadan JSR</div>
