Made a grid for the selected neuron

--- a/percy.html
+++ b/percy.html
@@ -1,3 +1,4 @@
+
 <html>
 
 <head>
@@ -24,7 +25,14 @@
 				<div class="draw-grid">
 				</div>
 			</div>
-			<div class="info">Info</div>
+			<!-- Placeholder content for the neuron visualizer -->
+			<div class="info">Neurons
+				<div class="neuron-chooser"> 
+				
+				</div>
+				<div class="neu-weights">
+				</div>
+			</div>
 			<div class="result">
 				<h2>Result </h2>
 				<div>Assumption <span class="spanini"></span></div>
